[package]
authors = ["Brennan Chesley <holtchesley@example.com>"]
name = "urql"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
itertools = "0.6.1"
rand = "0.3.16"
regex = "0.2.2"

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"

[dev-dependencies]
nom-test-helpers = "3.0.0"
quickcheck = "0.4.1"
